# docker_dev_template

./: .dockerignore  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  DEBUG_SUMMARY.md  Dockerfile  Dockerfile.backend  Makefile  OPTIMIZATION_SUMMARY.md  README.md  Untitled.ipynb  basic_models.ipynb  dashboard.yaml  docker-compose.yml  env.template  environment.ipynb  environment_uv_docker_jax_pytorch.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_4090.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend copy.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend.ipynb  example_fastapi_react_vite_optimized copy 2.ipynb  example_fastapi_react_vite_optimized copy.ipynb  example_fastapi_react_vite_optimized.ipynb  explainer_dashboard.html  mlflow_modularized_example.ipynb  mlflow_shapiq_explainer_modularized_example.ipynb  mlflow_shapiq_explainer_modularized_fastapi_example.ipynb  netlify.toml  nfl_kicker_analysis_modular_clutch_exp_imp_age_addon.ipynb  package-lock.json  package.json  pyproject.toml  railway_fastapi_template copy.ipynb  railway_react_template copy.ipynb  render.yaml  tasks.py  test_server.py
.cursor/: settings.json
.devcontainer/: .devcontainer.json  .dockerignore  .env.template  .postcreate.stamp  DEBUGGING_SYSTEM_COMMANDS.md  Dockerfile  boot.sh  debug_system_commands.py  devcontainer.env  devcontainer.json  docker-compose.yml  enhanced_gpu_test_functions.py  env.template  environment.yml  fix_kernel_registration.py  fix_missing_commands.sh  frameworks_bootstrap.sh  generate-project-name.sh  gpu_bootstrap.sh  gpu_verify.py  install_dependencies.sh  install_quarto.sh  install_requirements.sh  jags_verify.py  kernel_debug.py  opening.sh  postCreate_rtx5080.sh  postStart.sh  pyjags_patch.py  pyproject.toml  rebuild.sh  requirements.txt  rtx5080_repair.sh  setup.sh  setup_env.sh  test_optimized_setup.sh  troubleshoot.sh  validate_gpu.py  verify_env.py
.devcontainer/scripts/: host_preflight.py  test-gpu-docker.sh
.devcontainer/tests/: test_cv.py  test_pytorch.py  test_pytorch_gpu.py  test_summary.py  test_yolo.py  test_yolo_bas  test_yolo_basketball.py
.github/workflows/: netlify.yml
4090/: docker_uv_env_setup_4090.ipynb
archive/: environment_conda.ipynb  environment_jax_pytorch_conda.ipynb  environment_uv_docker.ipynb  environment_uv_docker_jax_pytorch copy.ipynb  environment_uv_docker_jax_pytorch.ipynb  environment_uv_docker_jax_pytorch_mlflow.ipynb  environment_uv_docker_jax_pytorch_mlflow_multistage.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend copy.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend.ipynb  example_fastapi_react_vite.ipynb  mlflow_shapiq_explainer_modularized_fastapi_example.ipynb  netlify.toml  netlify_frontend.ipynb  netlify_frontend_automated copy 2.ipynb  netlify_frontend_automated copy.ipynb  netlify_frontend_automated.ipynb  netlify_frontend_nfl.ipynb  railway_frontend.ipynb  render.yaml
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py  cancer.py  common.py  iris.py
backend/app/services/: __init__.py
cursor/: settings.json
data/Fanduel_Data_Scientist_2025/: Data_Scientist_Technical_Assessment_(3).docx  ~$ta_Scientist_Technical_Assessment_(3).docx
data/mystics_interview_2025/: Modeling Approach for 2024 MVP Prediction.docx
data/parquet_cache/: Players.parquet  TeamStatistics.parquet
frontend/: index.html  nfl_leaderboard_ex.txt  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
mlruns_local/0/: meta.yaml
mlruns_local/191923905000989700/: meta.yaml
mlruns_local/407750921781669166/: meta.yaml
mlruns_local/475167236437303899/: meta.yaml
mlruns_local/475626564877081081/: meta.yaml
mlruns_local/978192081793994163/: meta.yaml
mlruns_local/981668052009545679/: meta.yaml
notebooks/: 00_gpu_sanity.py  basic_models.ipynb  cuda_test.ipynb
notebooks/4090_gpu/: docker_uv_env_setup_4090_jaxtorchgpu_organized.ipynb  docker_uv_env_setup_4090_jaxtorchgpu_organized_yolo.ipynb  docker_uv_env_setup_4090_jaxtorchgpu_organized_yolo_updated.ipynb
notebooks/5080_gpu/: basic_models.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient_jaxgpu.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient_jaxgpu_efficient.ipynb  interview_prep.ipynb  interview_prep_sql.ipynb
notebooks/Fanduel_Data_Scientist_2025/: data_scientist_technical_assessment.ipynb
notebooks/heat_data_scientist_2025/: 5_hours_or_less_final.ipynb  5_hours_or_less_final_now_livecodingassessment.ipynb  5_hours_or_less_final_per_ewa_vorp_pie_gs36.ipynb  nba_data_catalog.md
notebooks/mavs_data_engineer_2025/: mavs_data_engineer.ipynb
notebooks/mystics_interview_2025/: 2024_mvp_predictions.csv  interview_5_hour_code_and_run.ipynb
scripts/: ci-validate.js  manage-env-name.ps1  manage-env-name.sh  port-manager.ps1  test-gpu.ps1  test-gpu.sh
src/examples/: nutpie_example.py  pymc_jax_example.py
src/heat_data_scientist_2025/: run_pie_gs36_prediction_pipeline.py
src/mlops/: experiment.py  experiment_utils.py  explainer.py  logging.py  model_registry.py  training.py  utils.py
src/nfl_kicker_analysis/: config.py  eda.py
template/: railway_debugging.txt
template/vite-react-template/: package-lock.json  package.json  railway.json  readme.md  vite.config.ts
tests/: diagnose_devcontainer.py  test1.py  test2.ipynb  test3.html  test3.qmd  test_api_smoke.py  test_cuda_policy.py  test_explainer.py  test_gpu_backends.py  test_mlflow_integration.py  test_pymc_jax_gpu.py  test_pytensor_gpu.py  test_pytorch_jax_gpu.py  test_routes.py  test_shapiq_utils.py
(+2869 files in other folders)
